--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Setup Jdk 17
       uses: actions/setup-java@v4
       with:
-        - java-version: 17
+        - java-version: '17'
         - distribution: 'corretto'
     - name: Run Unit Test
       run: |
@@ -84,7 +84,9 @@ jobs:
           file: Dockerfile
           push: true
           platforms: linux/amd64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:1.0.0,${{ secrets.DOCKERHUB_USERNAME }}/bsn-api:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/movie_booking_api:1.0.0
+            ${{ secrets.DOCKERHUB_USERNAME }}/movie_booking_api:latest
           build-args: |
             PROFILE=dev
             APP_VERSION=1.0.0
