--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -6,28 +6,28 @@ on:
       - main
     paths:
       - .github/workflows/*-backend.yaml
+
 jobs:
   compile:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     name: Compile Project
-
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Setup Jdk 17
-      uses: actions/setup-java@v4
-      with:
-        - java-version: '17'
-        - distribution: 'corretto'
-    - name: Run Unit Test
-      run: |
-        mvn clean compile
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Setup Jdk 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+      - name: Run Unit Test
+        run: mvn clean compile
 
   unit-test:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     name: Running Unit Test
+    needs: compile
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -36,15 +36,15 @@ jobs:
       - name: Setup Jdk 17
         uses: actions/setup-java@v4
         with:
-          - java-version: 17
-          - distribution: 'corretto'
+          java-version: '17'
+          distribution: 'corretto'
       - name: Run Unit Test
-        run: |
-          mvn clean test
+        run: mvn clean test
+
   build:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     name: Build Backend
-    needs: [compile,unit-test]
+    needs: unit-test
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -53,17 +53,20 @@ jobs:
       - name: Setup Jdk 17
         uses: actions/setup-java@v4
         with:
-          - java-version: 17
-          - distribution: 'corretto'
+          java-version: '17'
+          distribution: 'corretto'
       - name: Run Unit Test
-        run: |
-          mvn clean package
+        run: mvn clean package
 
   build-image:
     name: Build Docker image
-    runs-on: ubuntu:latest
-    needs: [ build ]
+    runs-on: ubuntu-latest
+    needs: build
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Setup JDK
         uses: actions/setup-java@v4
         with:
@@ -74,12 +77,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: Build & Push to DockerHub
         uses: docker/build-push-action@v5
         with:
-#          context: book-network
-#          file: docker/backend/Dockerfile
           context: .
           file: Dockerfile
           push: true
@@ -90,4 +90,3 @@ jobs:
           build-args: |
             PROFILE=dev
             APP_VERSION=1.0.0
-      
