--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -43,7 +43,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Build Backend
-    needs: [compile, unit-tests]
+    needs: [compile, unit-test]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
