--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -26,6 +26,19 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     name: Running Unit Test
+    services:
+    mysql:
+      image: mysql:5.7
+      env:
+        MYSQL_ROOT_PASSWORD: root
+        MYSQL_DATABASE: admin123
+      ports:
+        - 3309:3306
+      options: >-
+        --health-cmd="mysqladmin ping --silent" 
+        --health-interval=5s 
+        --health-timeout=3s 
+        --health-retries=5
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
