--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -28,7 +28,7 @@ jobs:
     name: Running Unit Test
     services:
     mysql:
-      image: 'mysql:5.7'
+      image: mysql:latest
       env:
         MYSQL_ROOT_PASSWORD: 'root'
         MYSQL_DATABASE: 'admin123'
