--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -30,8 +30,10 @@ jobs:
      mysql:
       image: mysql:latest
       env:
-        MYSQL_ROOT_PASSWORD: 'root'
-        MYSQL_DATABASE: 'admin123'
+        MYSQL_ROOT_PASSWORD: 'admin123'
+        MYSQL_DATABASE: 'movie_ticket_booking'
+        MYSQL_USER: movie_ticket_booking
+        MYSQL_PASSWORD: movie_ticket_booking
       ports:
         - 3309:3306
       options: >-
