--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=MovieTicketBookingSystem
 ###
 spring.jpa.hibernate.ddl-auto=update
 
- spring.datasource.url=jdbc:mysql://127.0.0.1:3309/movie_ticket_booking
+ spring.datasource.url=jdbc:mysql://mysql_db:3306/movie_ticket_booking
  spring.datasource.username=movie_ticket_booking
  spring.datasource.password=movie_ticket_booking
  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
