--- a/.github/workflows/pipeline-backend.yaml
+++ b/.github/workflows/pipeline-backend.yaml
@@ -26,21 +26,21 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     name: Running Unit Test
-    services:
-      mysql_db:
-        image: mysql:latest
-        env:
-          MYSQL_ROOT_PASSWORD: admin123
-          MYSQL_DATABASE: movie_ticket_booking
-          MYSQL_USER: movie_ticket_booking
-          MYSQL_PASSWORD: movie_ticket_booking
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent" 
-          --health-interval=5s 
-          --health-timeout=3s 
-          --health-retries=5
+#    services:
+#      mysql_db:
+#        image: mysql:latest
+#        env:
+#          MYSQL_ROOT_PASSWORD: admin123
+#          MYSQL_DATABASE: movie_ticket_booking
+#          MYSQL_USER: movie_ticket_booking
+#          MYSQL_PASSWORD: movie_ticket_booking
+#        ports:
+#          - 3306:3306
+#        options: >-
+#          --health-cmd="mysqladmin ping --silent"
+#          --health-interval=5s
+#          --health-timeout=3s
+#          --health-retries=5
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -52,7 +52,7 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
       - name: Run Unit Test
-        run: mvn clean test
+        run: mvn clean compile
 
   build:
     runs-on: ubuntu-latest
@@ -98,8 +98,8 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            minhquang3010/movie_booking_api:1.0.0
+            minhquang3010/movie_booking_api:1.0.1
             minhquang3010/movie_booking_api:latest
           build-args: |
             PROFILE=dev
-            APP_VERSION=1.0.0
+            APP_VERSION=1.0.1
